Fixed borders and spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,6 @@
   }
 
   header {
-    padding-bottom: 10%;
     margin-bottom: 1%;
     text-align: center;
   }
@@ -26,7 +25,6 @@ h1 {
 }
 
 main {
-    border-top: solid 3px black;
     padding: 25px;
 }
 
@@ -41,7 +39,9 @@ form {
     border-top: solid 2px black;
 }
 
-label{}
+label{
+    width: 8em;
+}
 
 input::placeholder {
     text-align: right;
@@ -71,8 +71,7 @@ footer {
 
 #newsletter input[type=checkbox],
 #newsletter input[type=radio] {
-    margin-right: .5em;
-    margin-bottom: 1em;
+    margin: 1em 0.5em 1em;
 }
 
 label,
@@ -93,6 +92,15 @@ select {
 
 .zip {
     width: 40%;
+}
+
+.box {
+    margin: 1em;
+}
+
+#bottom-border {
+    border-top: solid 3px black;
+    padding: .1em 0em;
 }
 
 #signup {
@@ -151,7 +159,11 @@ select {
     margin-bottom: 2em;
 }
 
+#zip-label {
+    margin-right: 2em;
+}
+
     .zip {
-        width: 25%;
+        width:40%;
     }
   }
